force-app/main/default/objects/VS_Slot__c/VS_Slot__c.object-meta.xml
<CustomObject>
    <label>VS Slot</label>
    <pluralLabel>VS Slots</pluralLabel>
    <description>F-001 slot-booking-core (VS-05, EP-02). The bookable 15-minute window a citizen picks (D-008), Master-Detail child of VS_Session__c. Carries the per-slot published capacity ceiling REQ-008 requires (VS_Capacity__c/VS_Booked_Count__c), but per D-019/D-020 this object is NOT the §3.4 lock target -- the single SELECT ... FOR UPDATE lock is on the parent VS_Session__c, and VS_Booked_Count__c is read/incremented only inside that lock by VS_BookingService.book() (VS-09). This ticket builds schema only; no slot-generation (VS-06) or booking-increment (VS-09) logic. OWD is ControlledByParent (inherits Facility -> Session's Public Read Only, design §2.2). Retention class (Annexure C4): bookings 3 yr.</description>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <displayFormat>SLT-{00000}</displayFormat>
        <label>Slot Name</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>