force-app/main/default/objects/VS_Slot__c/fields/VS_Booked_Count__c.field-meta.xml
<CustomField>
    <fullName>VS_Booked_Count__c</fullName>
    <label>Booked Count</label>
    <description>Running count of confirmed bookings consumed from this slot's VS_Capacity__c ceiling. CRITICAL (D-020): this is a plain writable Number, deliberately NOT a Roll-Up Summary and NOT a formula -- a roll-up/formula cannot serialize under the parent session's SELECT ... FOR UPDATE lock and would break the §3.4 no-overbooking guarantee (rules/20 forbids roll-up/trigger maintenance of this counter). Read and incremented ONLY inside VS_Session__c's lock by VS_BookingService.book() (VS-09, D-019/D-020) -- never by automation in this ticket. Defaults to 0 on creation.</description>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <required>true</required>
</CustomField>