force-app/main/default/objects/VS_Slot__c/fields/VS_Session__c.field-meta.xml
<CustomField>
    <fullName>VS_Session__c</fullName>
    <label>Session</label>
    <description>Master-Detail to VS_Session__c: the session this slot was generated within (VS-06). Master-Detail (not Lookup) because a slot is a generated artifact of its session, cascades on session delete/reparent, inherits the session's sharing, and is protected by the session's single §3.4 booking lock (design §2.4, D-019/D-020) -- there is no separate slot-row lock.</description>
    <type>MasterDetail</type>
    <referenceTo>VS_Session__c</referenceTo>
    <relationshipLabel>Slots</relationshipLabel>
    <relationshipName>VS_Slots</relationshipName>
</CustomField>