force-app/main/default/objects/VS_Slot__c/fields/VS_Slot_End__c.field-meta.xml
<CustomField>
    <fullName>VS_Slot_End__c</fullName>
    <label>Slot End</label>
    <description>End of this 15-minute bookable window (D-008). Populated by VS-06 slot generation alongside VS_Slot_Start__c; used for check-in/no-show timing (VS-12) and citizen-facing display (VS-16).</description>
    <type>DateTime</type>
    <required>true</required>
</CustomField>