force-app/main/default/objects/VS_Slot__c/fields/VS_Slot_Start__c.field-meta.xml
<CustomField>
    <fullName>VS_Slot_Start__c</fullName>
    <label>Slot Start</label>
    <description>Start of this 15-minute bookable window (D-008 default granularity, configurable via VS_Setting__mdt/VS_Service__c.VS_Slot_Granularity_Mins__c). Populated by VS-06 slot generation from the parent session's operating window -- no generation logic lives in this ticket.</description>
    <type>DateTime</type>
    <required>true</required>
</CustomField>