force-app/main/default/objects/VS_Slot__c/fields/VS_Status__c.field-meta.xml
<CustomField>
    <fullName>VS_Status__c</fullName>
    <label>Status</label>
    <description>Slot lifecycle status controlling whether it is offered for booking. Values match design §2.3 exactly: Open (bookable), Full (VS_Booked_Count__c has reached VS_Capacity__c), Closed (administratively closed, e.g. session closed), Cancelled (session or slot cancelled). Flipped by VS_BookingService (VS-09/VS-11) inside the session lock -- no automation in this ticket.</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>